# energy-based-surface-classification

./: README.md  download_dataset.sh  pyproject.toml
data/: motor_models.mat
python/: step_0_prepare_data.py  step_10_plot_identified_surfaces.py  step_1_visualize_data.py  step_2_DCT_models.py  step_3_create_and_test_surface_classifier.py  step_4_create_detection_dataset.py  step_5_train_detector_nn.py  step_6_train_detector_other_models.py  step_7_evaluate_detectors.py  step_8_search_identification_directions.py  step_9_search_identification_time.py
python/utils/: data_fitting.py  dct.py  kalman_filter.py  misc.py  models_wrappers.py  neural_network.py  surface_classifier.py
